add child to uri path